@@ -4623,25 +4623,30 @@ Tk_PhotoPutBlock(
      * Check if display code needs alpha blending...
      */
 
-    if (!sourceIsSimplePhoto || masterPtr->flags & COMPLEX_ALPHA) {
+    if (!sourceIsSimplePhoto && (width == 1) && (height == 1)) {
 	/*
-	 * Note that we skip in the single pixel case if we can. This speeds
-	 * up code that builds up large simple-alpha images by single pixels,
-	 * which seems to be a common use-case. [Bug 1409140]
+	 * Optimize the single pixel case if we can. This speeds up code that
+	 * builds up large simple-alpha images by single pixels.  We don't
+	 * negate COMPLEX_ALPHA in this case. [Bug 1409140]
 	 */
-
-	if (width == 1 && height == 1 && !(masterPtr->flags & COMPLEX_ALPHA)) {
+	if (!(masterPtr->flags & COMPLEX_ALPHA)) {
 	    unsigned char newAlpha;
 
 	    destLinePtr = masterPtr->pix32 + (y * masterPtr->width + x) * 4;
 	    newAlpha = destLinePtr[3];
 
-	    if (newAlpha > 0 && newAlpha < 255) {
+	    if (newAlpha && newAlpha != 255) {
 		masterPtr->flags |= COMPLEX_ALPHA;
 	    }
-	} else {
-	    ToggleComplexAlphaIfNeeded(masterPtr);
 	}
+    } else if ((alphaOffset != 0) || (masterPtr->flags & COMPLEX_ALPHA)) {
+	/*
+	 * Check for partial transparency if alpha pixels are specified, or
+	 * rescan if we already knew such pixels existed.  To restrict this
+	 * Toggle to only checking the changed pixels requires knowing where
+	 * the alpha pixels are.
+	 */
+	ToggleComplexAlphaIfNeeded(masterPtr);
     }
 
     /*
@@ -4921,25 +4926,30 @@ Tk_PhotoPutZoomedBlock(
      * Check if display code needs alpha blending...
      */
 
-    if (!sourceIsSimplePhoto || masterPtr->flags & COMPLEX_ALPHA) {
+    if (!sourceIsSimplePhoto && (width == 1) && (height == 1)) {
 	/*
-	 * Note that we skip in the single pixel case if we can. This speeds
-	 * up code that builds up large simple-alpha images by single pixels,
-	 * which seems to be a common use-case. [Bug 1409140]
+	 * Optimize the single pixel case if we can. This speeds up code that
+	 * builds up large simple-alpha images by single pixels.  We don't
+	 * negate COMPLEX_ALPHA in this case. [Bug 1409140]
 	 */
-
-	if (width == 1 && height == 1 && !(masterPtr->flags & COMPLEX_ALPHA)) {
+	if (!(masterPtr->flags & COMPLEX_ALPHA)) {
 	    unsigned char newAlpha;
 
 	    destLinePtr = masterPtr->pix32 + (y * masterPtr->width + x) * 4;
 	    newAlpha = destLinePtr[3];
 
-	    if (newAlpha > 0 && newAlpha < 255) {
+	    if (newAlpha && newAlpha != 255) {
 		masterPtr->flags |= COMPLEX_ALPHA;
 	    }
-	} else {
-	    ToggleComplexAlphaIfNeeded(masterPtr);
 	}
+    } else if ((alphaOffset != 0) || (masterPtr->flags & COMPLEX_ALPHA)) {
+	/*
+	 * Check for partial transparency if alpha pixels are specified, or
+	 * rescan if we already knew such pixels existed.  To restrict this
+	 * Toggle to only checking the changed pixels requires knowing where
+	 * the alpha pixels are.
+	 */
+	ToggleComplexAlphaIfNeeded(masterPtr);
     }
 
     /*
